# UCSD_CodeAlong_26_3_Object_Detection

./: .gitignore  pyproject.toml  set_up.py  urls.txt
