[tool.poetry]
name = "ucsd-codealong-26-3-object-detection"
version = "0.1.0"
description = ""
authors = ["asmith81 <alden.w.smith.iii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = {extras = ["all"], version = "^3.58.0"}
scmrepo = "^3.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
